<resources>
    <string name="app_name">My Grocery App</string>
    <string name="title_activity_sidebar_menu">sidebarMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">xyz@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profil">Profil</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_registers">Registers</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_custom_categories">Customized Categories</string>
    <string name="menu_products">Products</string>
    <string name="menu_custom_products">Customized products</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_addCategorie">Add Categories</string>
    <string name="menu_addProduct">Add Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>