<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.ensah.mygroceryapp.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />
    <fragment
        android:id="@+id/nav_Products"
        android:name="com.ensah.mygroceryapp.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />
    <fragment
        android:id="@+id/nav_cust_categories"
        android:name="com.ensah.mygroceryapp.ui.custCategories.CustCategoriesFragment"
        android:label="@string/menu_custom_categories"
        tools:layout="@layout/fragment_custcategories" />
    <fragment
        android:id="@+id/nav_cust_Products"
        android:name="com.ensah.mygroceryapp.ui.custProduct.CustProductsFragment"
        android:label="@string/menu_custom_products"
        tools:layout="@layout/fragment_custproducts" />

    <fragment
        android:id="@+id/nav_Group"
        android:name="com.ensah.mygroceryapp.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_lists"
        android:name="com.ensah.mygroceryapp.ui.lists.ListsFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_lists" />

    <fragment
        android:id="@+id/nav_registers"
        android:name="com.ensah.mygroceryapp.ui.registers.RegistersFragment"
        android:label="@string/menu_registers"
        tools:layout="@layout/fragment_registers" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ensah.mygroceryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

</navigation>