<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            />
    </group>

    <group android:checkableBehavior="single">

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/nav_lists"
                android:title="@string/menu_lists" />
            <item
                android:id="@+id/nav_registers"
                android:title="@string/menu_registers" />
            <item
                android:id="@+id/nav_categories"
                android:title="@string/menu_categories" />
            <item
                android:id="@+id/nav_Products"
                android:title="@string/menu_products" />
        </menu>
    </item>
    </group>

</menu>